# EpicsApplicationManager

./: pyproject.toml
AppManager/: __init__.py  validate_startup_cmd.py  validate_substitutions.py  validate_templates.py
AppManager/app/: __init__.py  cli_validate.py  ioc_archive_manager.py  ioc_backup_manager.py  ioc_master.py  ioc_validation_engine.py  ioc_workflow_manager.py  reports.py  sub_manager.py  template_analyzer.py  template_consolidator.py  test_validation.py  validate_app.py  workflow_manager.py
AppManager/scripts/: emit_annotations_and_fail.py  summarize_reports.py
AppManager/tools/: __init__.py  validation_engine.py
