[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epics-application-workflows"
version = "0.0.0"
description = "EPICS application workflows and validation tools"
readme = "README"
requires-python = ">=3.8"
authors = [ { name = "EPICS Team" } ]
license = { text = "MIT" }
dependencies = []

[project.scripts]
validate-substitutions = "AppManager.validate_substitutions:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["AppManager", "AppManager.*"]
